--- a/web/product/app.html
+++ b/web/product/app.html
@@ -164,16 +164,20 @@
   <div id="footer-placeholder"></div>
 
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      fetch('/components/nav.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('nav-placeholder').innerHTML = data);
+    fetch('/components/nav.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('nav-placeholder').innerHTML = data;
 
-      fetch('/components/footer.html')
+    fetch('/components/footer.html')
         .then(res => res.text())
         .then(data => document.getElementById('footer-placeholder').innerHTML = data);
 
-      const observer = new IntersectionObserver(entries => {
+    // ✅ 綁定 hamburger 點擊事件
+    const hamburger = document.querySelector('.hamburger');
+    const navMenu = document.querySelector('.nav-links');
+
+    const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
           if (entry.isIntersecting) {
             entry.target.classList.add('active');
@@ -182,7 +186,22 @@
       }, { threshold: 0.1 });
 
       document.querySelectorAll('.section').forEach(section => observer.observe(section));
+
+
+    document.addEventListener('click', function (e) {
+      const clickedInsideBtn = (e.target === hamburger || hamburger.contains(e.target));
+      const clickedInsideMenu = navMenu.contains(e.target);
+      const clickedLink = e.target.closest('a');
+
+      if (clickedInsideBtn) {
+        navMenu.classList.toggle('open');
+      } else if (clickedLink && clickedInsideMenu) {
+        navMenu.classList.remove('open');
+      } else if (!clickedInsideMenu) {
+        navMenu.classList.remove('open');
+      }
     });
+  });
   </script>
 </body>
 </html>
