--- a/web/about.html
+++ b/web/about.html
@@ -162,20 +162,20 @@
     <h2><i class="fas fa-users"></i> 團隊成員</h2>
     <div class="team-members">
       <div class="team-card">
-        <img src="https://i.pravatar.cc/100?u=ceo" alt="CEO">
+        <img src="" alt="CEO">
         <h4>治閎</h4>
         <p>創辦人暨執行長</p>
         <p>前端工程師</p>
         <p>專案總監</p>
       </div>
       <div class="team-card">
-        <img src="https://i.pravatar.cc/100?u=design" alt="Designer">
+        <img src="/image/002.jpg" alt="Designer">
         <h4>珊樺</h4>
         <p>美術總監</p>
         <p>平面設計師</p>
       </div>
       <div class="team-card">
-        <img src="https://i.pravatar.cc/100?u=dev" alt="Dev">
+        <img src="" alt="Dev">
         <h4>宗穎</h4>
         <p>團隊負責人</p>
         <p>前端工程師</p>
@@ -195,12 +195,33 @@
   <div id="footer-placeholder"></div>
 
   <script>
-    fetch('../components/nav.html').then(res => res.text()).then(html => {
-      document.getElementById('nav-placeholder').innerHTML = html;
+    fetch('../components/nav.html')
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById('nav-placeholder').innerHTML = data;
+
+  fetch('../components/footer.html')
+        .then(res => res.text())
+        .then(data => document.getElementById('footer-placeholder').innerHTML = data);
+        
+    // ✅ 綁定 hamburger 點擊事件
+    const hamburger = document.querySelector('.hamburger');
+    const navMenu = document.querySelector('.nav-links');
+
+    document.addEventListener('click', function (e) {
+      const clickedInsideBtn = (e.target === hamburger || hamburger.contains(e.target));
+      const clickedInsideMenu = navMenu.contains(e.target);
+      const clickedLink = e.target.closest('a');
+
+      if (clickedInsideBtn) {
+        navMenu.classList.toggle('open');
+      } else if (clickedLink && clickedInsideMenu) {
+        navMenu.classList.remove('open');
+      } else if (!clickedInsideMenu) {
+        navMenu.classList.remove('open');
+      }
     });
-    fetch('../components/footer.html').then(res => res.text()).then(html => {
-      document.getElementById('footer-placeholder').innerHTML = html;
-    });
+  });
 
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
