--- a/web/faq.html
+++ b/web/faq.html
@@ -95,21 +95,41 @@
   </main>
   <div id="footer-placeholder"></div>
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      fetch('../components/nav.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('nav-placeholder').innerHTML = data);
-      fetch('../components/footer.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('footer-placeholder').innerHTML = data);
+  window.addEventListener('DOMContentLoaded', () => {
+    // 1. 載入 nav 並綁定 hamburger
+    fetch('../components/nav.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('nav-placeholder').innerHTML = data;
 
-      document.querySelectorAll('.faq-question').forEach(item => {
+        // 綁定 hamburger
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-links');
+        if (hamburger && navMenu) {
+          hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+          });
+        }
+      });
+
+    // 2. 載入 footer（如需）
+    fetch('../components/footer.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('footer-placeholder').innerHTML = data;
+      });
+
+    // 3. FAQ 綁定 - 等 DOM 完成後做（不在 fetch 外執行）
+    requestAnimationFrame(() => {
+      const faqItems = document.querySelectorAll('.faq-question');
+      faqItems.forEach(item => {
         item.addEventListener('click', () => {
-          const parent = item.parentElement;
-          parent.classList.toggle('active');
+          item.parentElement.classList.toggle('active');
         });
       });
     });
-  </script>
+  });
+</script>
+
 </body>
 </html>
