--- a/web/jobs.html
+++ b/web/jobs.html
@@ -147,10 +147,32 @@
   </main>
   <div id="footer-placeholder"></div>
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      fetch('../components/nav.html').then(res => res.text()).then(data => document.getElementById('nav-placeholder').innerHTML = data);
-      fetch('../components/footer.html').then(res => res.text()).then(data => document.getElementById('footer-placeholder').innerHTML = data);
-    });
-  </script>
+  window.addEventListener('DOMContentLoaded', () => {
+    // 載入 nav.html
+    fetch('../components/nav.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('nav-placeholder').innerHTML = data;
+
+        // ✅ 插入完成後綁定事件
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-links');
+
+        if (hamburger && navMenu) {
+          hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+          });
+        }
+      });
+
+    // 載入 footer.html
+    fetch('../components/footer.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('footer-placeholder').innerHTML = data;
+      });
+  });
+</script>
+
 </body>
 </html>
