--- a/web/login.html
+++ b/web/login.html
@@ -124,19 +124,39 @@
   </main>
   <div id="footer-placeholder"></div>
   <script>
-    function toggleForm(mode) {
-      document.getElementById('login-box').style.display = mode === 'login' ? 'block' : 'none';
-      document.getElementById('register-box').style.display = mode === 'register' ? 'block' : 'none';
-    }
+  function toggleForm(mode) {
+    document.getElementById('login-box').style.display = mode === 'login' ? 'block' : 'none';
+    document.getElementById('register-box').style.display = mode === 'register' ? 'block' : 'none';
+  }
 
-    window.addEventListener('DOMContentLoaded', () => {
-      fetch('../components/nav.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('nav-placeholder').innerHTML = data);
-      fetch('../components/footer.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('footer-placeholder').innerHTML = data);
-    });
-  </script>
+  window.addEventListener('DOMContentLoaded', () => {
+    // 載入 nav.html 並在插入後綁定 hamburger 點擊事件
+    fetch('../components/nav.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('nav-placeholder').innerHTML = data;
+
+        // ✅ 綁定 hamburger 點擊事件
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-links');
+
+        if (hamburger && navMenu) {
+          hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+          });
+        } else {
+          console.warn('找不到 hamburger 或 navMenu');
+        }
+      });
+
+    // 載入 footer.html（可選）
+    fetch('../components/footer.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('footer-placeholder').innerHTML = data;
+      });
+  });
+</script>
+
 </body>
 </html>
