--- a/web/member/comments.html
+++ b/web/member/comments.html
@@ -162,24 +162,49 @@
   <!-- 🔽 footer -->
   <div id="footer-container"></div>
   <script>
-    fetch('/components/footer.html')
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById('footer-container').innerHTML = data;
+  // 載入 footer
+  fetch('/components/footer.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('footer-container').innerHTML = data;
+    });
+
+  // ✅ 載入 nav 並綁定漢堡選單
+  fetch('/components/nav.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('nav-placeholder').innerHTML = data;
+
+      // 等待 DOM 插入後綁定漢堡事件
+      requestAnimationFrame(() => {
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-links');
+
+        if (hamburger && navMenu) {
+          hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+          });
+        } else {
+          console.warn("⚠️ hamburger 或 nav-links 找不到，請確認 nav.html 結構是否正確");
+        }
       });
+    });
 
-    function editComment(id) {
-      alert("⚙️ 開啟編輯功能（示意）：" + id);
-      // 可連結到編輯頁或開啟編輯彈窗
-    }
+  // 編輯留言功能
+  function editComment(id) {
+    alert("⚙️ 開啟編輯功能（示意）：" + id);
+    // 可開啟編輯介面或跳轉
+  }
 
-    function deleteComment(id) {
-      if (confirm("你確定要刪除這則留言嗎？")) {
-        document.getElementById(id).remove();
-        alert("✅ 留言已刪除");
-      }
+  // 刪除留言功能
+  function deleteComment(id) {
+    if (confirm("你確定要刪除這則留言嗎？")) {
+      document.getElementById(id).remove();
+      alert("✅ 留言已刪除");
     }
-  </script>
+  }
+</script>
+
 
 </body>
 </html>
