--- a/web/products.html
+++ b/web/products.html
@@ -167,16 +167,35 @@
   <div id="footer-placeholder"></div>
 
   <script>
-    // 動態載入 nav 與 footer
-    window.addEventListener('DOMContentLoaded', () => {
-      fetch('../components/nav.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('nav-placeholder').innerHTML = data);
+  // 動態載入 nav 與 footer 並綁定 hamburger 功能
+  window.addEventListener('DOMContentLoaded', () => {
+    fetch('../components/nav.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('nav-placeholder').innerHTML = data;
 
-      fetch('../components/footer.html')
-        .then(res => res.text())
-        .then(data => document.getElementById('footer-placeholder').innerHTML = data);
-    });
-  </script>
+        // ⏳ 綁定漢堡按鈕（等 DOM 插入完成後）
+        requestAnimationFrame(() => {
+          const hamburger = document.querySelector('.hamburger');
+          const navMenu = document.querySelector('.nav-links');
+
+          if (hamburger && navMenu) {
+            hamburger.addEventListener('click', () => {
+              navMenu.classList.toggle('open');
+            });
+          } else {
+            console.warn('⚠️ 無法找到 hamburger 或 nav-links，請確認 nav.html 結構');
+          }
+        });
+      });
+
+    fetch('../components/footer.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('footer-placeholder').innerHTML = data;
+      });
+  });
+</script>
+
 </body>
 </html>
