Changes to be committed:

--- a/web/product/branding.html
+++ b/web/product/branding.html
@@ -145,9 +145,9 @@
       <h2>🎨 設計風格範例</h2>
       <div class="swiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=極簡風格" alt="極簡風格 Logo"></div>
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=科技風格" alt="科技風格 Logo"></div>
-          <div class="swiper-slide"><img src="https://via.placeholder.com/800x400?text=插畫風格" alt="插畫風格 Logo"></div>
+          <div class="swiper-slide"><img src="/image/Flux_Dev_A_stylized_logo_featuring_a_harmonious_fusion_of_a_le_0_0.jpg" alt="極簡風格 Logo"></div>
+          <div class="swiper-slide"><img src="/image/未命名設計_0.jpg" alt="科技風格 Logo"></div>
+          <div class="swiper-slide"><img src="/image/branding001.png" alt="插畫風格 Logo"></div>
         </div>
       </div>
     </div>
