Changes to be committed:

--- a/web/about.html
+++ b/web/about.html
@@ -162,7 +162,7 @@
     <h2><i class="fas fa-users"></i> 團隊成員</h2>
     <div class="team-members">
       <div class="team-card">
-        <img src="" alt="CEO">
+        <img src="/image/me.jpg" alt="CEO">
         <h4>治閎</h4>
         <p>創辦人暨執行長</p>
         <p>前端工程師</p>
