--- a/web/member/comments.html
+++ b/web/member/comments.html
@@ -173,7 +173,7 @@
   fetch('/components/nav.html')
     .then(res => res.text())
     .then(data => {
-      document.getElementById('nav-placeholder').innerHTML = data;
+      document.getElementById('nav-container').innerHTML = data;
 
       // 等待 DOM 插入後綁定漢堡事件
       requestAnimationFrame(() => {
@@ -203,8 +203,6 @@
       alert("✅ 留言已刪除");
     }
   }
-</script>
-
-
+  </script>
 </body>
 </html>
