--- a/web/member/favorites.html
+++ b/web/member/favorites.html
@@ -158,21 +158,44 @@
   <!-- 🔽 footer -->
   <div id="footer-container"></div>
   <script>
-    fetch('/components/footer.html').then(res => res.text()).then(data => {
-      document.getElementById('footer-container').innerHTML = data;
+  // ✅ 載入 footer
+  fetch('/components/footer.html').then(res => res.text()).then(data => {
+    document.getElementById('footer-container').innerHTML = data;
+  });
+
+  // ✅ 載入 nav 並綁定漢堡選單事件
+  fetch('/components/nav.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('nav-container').innerHTML = data;
+
+      // 等待 DOM 插入後綁定漢堡功能
+      requestAnimationFrame(() => {
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-links');
+
+        if (hamburger && navMenu) {
+          hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+          });
+        }
+      });
     });
 
-    function addToCart(item) {
-      alert(`✅「${item}」已加入購物車！`);
-    }
+  // ✅ 加入購物車功能
+  function addToCart(item) {
+    alert(`✅「${item}」已加入購物車！`);
+  }
 
-    function removeFav(id) {
-      const card = document.getElementById(id);
-      if (card && confirm("你確定要移除這項收藏嗎？")) {
-        card.remove();
-      }
+  // ✅ 移除收藏功能
+  function removeFav(id) {
+    const card = document.getElementById(id);
+    if (card && confirm("你確定要移除這項收藏嗎？")) {
+      card.remove();
     }
-  </script>
+  }
+</script>
+
 
 </body>
 </html>
