--- a/web/member/payment.html
+++ b/web/member/payment.html
@@ -143,10 +143,27 @@
   <!-- 🔼 nav -->
   <div id="nav-container"></div>
   <script>
-    fetch('/components/nav.html').then(res => res.text()).then(data => {
+  fetch('/components/nav.html')
+    .then(res => res.text())
+    .then(data => {
       document.getElementById('nav-container').innerHTML = data;
+
+      // ⏳ 等 DOM 插入完成後綁定漢堡按鈕點擊事件
+      requestAnimationFrame(() => {
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-links');
+
+        if (hamburger && navMenu) {
+          hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+          });
+        } else {
+          console.warn('⚠️ hamburger 或 nav-links 沒找到，請檢查 nav.html 結構是否正確');
+        }
+      });
     });
-  </script>
+</script>
+
 
   <!-- 🔽 主內容 -->
   <div class="container">
