--- a/web/member/profile.html
+++ b/web/member/profile.html
@@ -92,10 +92,27 @@
   <!-- 🔼 導覽列 -->
   <div id="nav-container"></div>
   <script>
-    fetch('/components/nav.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('nav-container').innerHTML = data);
-  </script>
+  fetch('/components/nav.html')
+    .then(res => res.text())
+    .then(data => {
+      document.getElementById('nav-container').innerHTML = data;
+
+      // ⏳ 等 DOM 插入完成後綁定漢堡按鈕點擊事件
+      requestAnimationFrame(() => {
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.querySelector('.nav-links');
+
+        if (hamburger && navMenu) {
+          hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('open');
+          });
+        } else {
+          console.warn('⚠️ hamburger 或 nav-links 沒找到，請檢查 nav.html 結構是否正確');
+        }
+      });
+    });
+</script>
+
 
   <!-- 🔽 主體內容 -->
   <div class="container">
