Changes to be committed:

--- a/web/studio/editor.html
+++ b/web/studio/editor.html
@@ -12,7 +12,7 @@
   <!-- 🔹 頂部導覽列 -->
   <header class="studio-nav">
     <div class="nav-left">
-      <a href="/web/index.html" id="logo">Nexelink Studio</a>
+      <a href="#" id="logo">Nexelink Studio</a>
     </div>
     <div class="nav-right">
       <button id="previewBtn"><i class="fas fa-eye"></i> 預覽</button>
@@ -26,50 +26,43 @@
   <div class="studio-container">
     <!-- 🧱 左側模組列 -->
     <aside class="studio-sidebar">
-      <div class="module" draggable="true" title="圖片">
+      <div class="module" draggable="true" data-type="圖片">
         <i class="fas fa-image"></i><span class="label">圖片</span>
       </div>
-      <div class="module" draggable="true" title="文字">
+      <div class="module" draggable="true" data-type="文字">
         <i class="fas fa-font"></i><span class="label">文字</span>
       </div>
-      <div class="module" draggable="true" title="影片">
+      <div class="module" draggable="true" data-type="影片">
         <i class="fas fa-video"></i><span class="label">影片</span>
       </div>
-      <div class="module" draggable="true" title="音樂">
+      <div class="module" draggable="true" data-type="音樂">
         <i class="fas fa-music"></i><span class="label">音樂</span>
       </div>
-      <div class="module" draggable="true" title="按鈕">
+      <div class="module" draggable="true" data-type="按鈕">
         <i class="fas fa-square"></i><span class="label">按鈕</span>
       </div>
-      <div class="module" draggable="true" title="Icon">
-        <i class="fas fa-icons"></i><span class="label">Icon</span>
-      </div>
-      <div class="module" draggable="true" title="表單">
+      <div class="module" draggable="true" data-type="表單">
         <i class="fas fa-pen-to-square"></i><span class="label">表單</span>
       </div>
-      <div class="module" draggable="true" title="地圖">
+      <div class="module" draggable="true" data-type="地圖">
         <i class="fas fa-map-marked-alt"></i><span class="label">地圖</span>
-      </div>
-      <!-- 🔧 功能控制模組 -->
-      <hr />
-      <div class="module" id="undoBtn">
-        <i class="fas fa-rotate-left"></i><span class="label">復原</span>
-      </div>
-      <div class="module" id="redoBtn">
-        <i class="fas fa-rotate-right"></i><span class="label">重做</span>
-      </div>
-      <div class="module" id="aiBtn">
-        <i class="fas fa-robot"></i><span class="label">AI 協助</span>
-      </div>
-      <div class="module" id="helpBtn">
-        <i class="fas fa-circle-question"></i><span class="label">教學說明</span>
       </div>
     </aside>
 
     <!-- 🔲 畫布區 -->
     <main class="studio-canvas" id="canvas">
-      <!-- 點陣格子將由 JS 自動生成 -->
+      <!-- 主要區塊容器將由 JS 動態生成 -->
     </main>
   </div>
+  <div id="footerplaceholder"></div>
+  <!-- 🔻 Footer 導入 -->
+  <div id="footer"></div>
+  <script>
+    fetch('/components/footer.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('footer').innerHTML = html;
+      });
+  </script>
 </body>
 </html>
