Changes to be committed:

--- a/web/product/detial.html
+++ b/web/product/detial.html
@@ -149,7 +149,7 @@
 
     <div class="cta-banner">
       <h2>讓我們幫你打造穩定高效的企業網站</h2>
-      <a href="contact.html"><i class="fas fa-envelope"></i> 立即洽詢</a>
+      <a href="/web/contact.html"><i class="fas fa-envelope"></i> 立即洽詢</a>
       <a href="#"><i class="fas fa-file-download"></i> 下載簡介</a>
     </div>
   </main>
